# sudoku

./: README.md  com.github.alexkdeveloper.sudoku.json  meson.build
data/: com.github.alexkdeveloper.sudoku.appdata.xml.in  com.github.alexkdeveloper.sudoku.desktop.in  com.github.alexkdeveloper.sudoku.gschema.xml  meson.build
po/: POTFILES  nl.po  ru.po
src/: Application.vala  Board.vala  Constants.vala  HeaderBar.vala  MainWindow.vala  StackManager.vala  WinPage.vala
src/logic/: Difficulty.vala  SudokuBoard.vala  SudokuSettings.vala
src/views/: DifficultyView.vala  GameView.vala  WelcomeView.vala
